--- a/clientSide/src/styles.css
+++ b/clientSide/src/styles.css
@@ -1,17 +1,11 @@
-div.sm-jumbotron{
-    margin: 0px;
-    padding: 2rem;
-    background-color: #38547b;
-    color: #fff;
-}
-
 button.btn-submit{
-    background-color: #38547b;
+    background-color: #333;
     color: #fff;
     width: 100%;
 }
+
 button.btn-submit:focus,button.btn-submit:hover{
-    background-color: #38547b;
+    background-color: #a82323;
 }
 
 input.ng-invalid.ng-dirty{
