--- a/ClientSide/src/app/header/header.component.html
+++ b/ClientSide/src/app/header/header.component.html
@@ -1,1 +1,18 @@
-<p>header works!</p>
+<h1 class="muted">Multi Draw</h1>
+<ul class="nav">
+    <li>
+        <a href="#">About The Site</a>
+    </li> || 
+
+    <li>
+        <a href="#">Sign In</a>
+    </li>
+
+    <li> || 
+        <a href="#">Log In</a>
+    </li>
+
+    <li> ||
+        <a href="#">Sign out</a>
+    </li>
+</ul>
