--- a/ClientSide/src/app/user-auth/user-auth.component.html
+++ b/ClientSide/src/app/user-auth/user-auth.component.html
@@ -4,10 +4,10 @@
             <h3>Login!</h3>
             <form>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Your Email *" value="" />
+                    <input type="text" class="form-control" placeholder="Email/Username*"/>
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Your Password *" value="" />
+                    <input type="password" class="form-control" placeholder="Your Password*"/>
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btnSubmit" value="Login" />
@@ -21,13 +21,19 @@
             <h3>Signup!</h3>
             <form>
                 <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Your Email *" value="" />
+                    <input type="text" class="form-control" placeholder="First Name*" required/>
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Your Password *" value="" />
+                        <input type="text" class="form-control" placeholder="Username*" required/>
+                    </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Enter Email*" required/>
                 </div>
                 <div class="form-group">
-                    <input type="submit" class="btnSubmit" value="Signup" />
+                    <input type="password" class="form-control" placeholder="Enter Password*" required/>
+                </div>
+                <div class="form-group">
+                    <input type="submit" class="btnSubmit" value="Signup"/>
                 </div>
             </form>
         </div>
