--- a/ClientSide/src/app/user-auth/user-auth.component.html
+++ b/ClientSide/src/app/user-auth/user-auth.component.html
@@ -3,38 +3,20 @@
         <div class="col-md-6 login-form-1">
             <h3>Login!</h3>
             <form>
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Email/Username*"/>
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Your Password*"/>
-                </div>
-                <div class="form-group">
-                    <input type="submit" class="btnSubmit" value="Login" />
-                </div>
-                <div class="form-group">
-                    <a href="#" class="ForgetPwd">Forget Password?</a>
-                </div>
+                <input type="text" class="form-control form-group" placeholder="Email/Username*"/>
+                <input type="password" class="form-control form-group" placeholder="Your Password*"/>
+                <input type="submit" class="btnSubmit form-group" value="Login" /><br>
+                <a href="#" class="ForgetPwd">Forget Password?</a>
             </form>
         </div>
         <div class="col-md-6 login-form-2">
             <h3>Signup!</h3>
             <form>
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="First Name*" required/>
-                </div>
-                <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Username*" required/>
-                    </div>
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Enter Email*" required/>
-                </div>
-                <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Enter Password*" required/>
-                </div>
-                <div class="form-group">
-                    <input type="submit" class="btnSubmit" value="Signup"/>
-                </div>
+                <input type="text" class="form-control form-group" placeholder="First Name*" required/>
+                <input type="text" class="form-control form-group" placeholder="Username*" required/>
+                <input type="text" class="form-control form-group" placeholder="Enter Email*" required/>
+                <input type="password" class="form-control form-group" placeholder="Enter Password*" required/>
+                <input type="submit" class="btnSubmit" value="Signup"/>
             </form>
         </div>
     </div>
