--- a/ServerSide/MultiLive/articles/templates/articles/article_list.html
+++ b/ServerSide/MultiLive/articles/templates/articles/article_list.html
@@ -1,8 +1,11 @@
+{% load static from staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Articles</title>
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
     <h1>Article List</h1>
