--- a/ServerSide/MultiLive/articles/templates/articles/article_list.html
+++ b/ServerSide/MultiLive/articles/templates/articles/article_list.html
@@ -1,13 +1,6 @@
-{% load static from staticfiles %}
+{% extends 'base_layout.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Articles</title>
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
-</head>
-<body>
+{% block content %}
     <h1>Article List</h1>
     <div class="articles">
         {% for article in articles %}
@@ -18,5 +11,4 @@
             </div>
         {% endfor %}
     </div>
-</body>
-</html>
+{% endblock %}
