ServerSide: Fixed REST API/FrameWork Usage & Added site Favicon

--- a/ServerSide/MultiLive/templates/base_layout.html
+++ b/ServerSide/MultiLive/templates/base_layout.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>MultiDraw</title>
+        <link rel="icon" href="{% static 'favicon2.png' %}">
         <link rel="stylesheet" href="{% static 'styles.css' %}">
     </head>
     <body>
