--- a/ClientSide/src/app/about/about.component.html
+++ b/ClientSide/src/app/about/about.component.html
@@ -1,1 +1,4 @@
-<p>about works!</p>
+<p>
+    Our goal is to give the user an easy and powerful way to allow
+    users to communicate with each other online for basically any reason.
+</p>
