--- a/ClientSide/src/app/app.component.html
+++ b/ClientSide/src/app/app.component.html
@@ -1,4 +1,8 @@
 <app-header></app-header>
-<app-user-auth></app-user-auth>
 <app-home-page></app-home-page>
+<app-user-auth></app-user-auth>
+<app-user-page></app-user-page>
 <app-work-space></app-work-space>
+<div class="container">
+    <button class="btn btn-primary" (click)="buttonClicked()">Send Data</button>
+</div>
