--- a/ClientSide/src/app/header/header.component.html
+++ b/ClientSide/src/app/header/header.component.html
@@ -1,18 +1,20 @@
-<h1 class="muted">Multi Draw</h1>
-<ul class="nav">
-    <li>
-        <a href="#">About The Site</a>
-    </li> || 
-
-    <li>
-        <a href="#">Sign In</a>
-    </li>
-
-    <li> || 
-        <a href="#">Log In</a>
-    </li>
-
-    <li> ||
-        <a href="#">Sign out</a>
-    </li>
-</ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">MultiDraw</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Login</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
