--- a/ServerSide/MultiLive/templates/base_layout.html
+++ b/ServerSide/MultiLive/templates/base_layout.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="wrapper">
-            <h1> <a href="{% url 'home' %}"><img src="{% static 'logo.png' %}" /></a> </h1>
+            <h1> <a href="{% url 'home' %}"><img src="{% static 'logo2.png' %}" /></a> </h1>
             <nav>
                 <ul>
                     {% if user.is_authenticated %}
