--- a/ClientSide/src/app/app.component.html
+++ b/ClientSide/src/app/app.component.html
@@ -1,8 +1,7 @@
-<app-header></app-header>
-<app-home-page></app-home-page>
-<app-user-auth></app-user-auth>
-<app-user-page></app-user-page>
-<app-work-space></app-work-space>
-<div class="container">
-    <button class="btn btn-primary" (click)="buttonClicked()">Send Data</button>
-</div>
+<h1>Multi Draw</h1>
+<hr>
+<pre>
+    lorem ipsum
+    lorem ipsum
+    lorem ipsum
+</pre>
