--- a/ClientSide/src/app/app.component.html
+++ b/ClientSide/src/app/app.component.html
@@ -9,7 +9,8 @@
 
   <!--Main Content Area-->
   <main id="content">
-
+    <app-navigation></app-navigation>
+    
     <router-outlet></router-outlet>
 
   </main>
