--- a/ClientSide/src/app/header/header.component.html
+++ b/ClientSide/src/app/header/header.component.html
@@ -1,19 +1,16 @@
 <header id="banner" class="scrollto clearfix" data-enllax-ratio=".5">
-    
-
     <!--Banner Content-->
     <div id="banner-content" class="row clearfix">
 
         <div class="col-38">
 
             <div class="section-heading">
-                <h1>A FREE AND SIMPLE LANDING PAGE</h1>
-                <h2>Namari is a free landing page template you can use for your projects. It is free to use for your
-                    personal and commercial projects, enjoy!</h2>
+                <h1>{{ header.heading }}</h1>
+                <h2>{{ header.headingtext }}</h2>
             </div>
 
             <!--Call to Action-->
-            <a href="#" class="button">START CREATING TODAY</a>
+            <a href="{{ header.buttonlink }}" class="button">{{ header.buttontext }}</a>
             <!--End Call to Action-->
 
         </div>
