--- a/ClientSide/src/app/content/content.component.html
+++ b/ClientSide/src/app/content/content.component.html
@@ -3,47 +3,27 @@
 
     <div class="row no-padding-bottom clearfix">
 
-
-        <!--Content Left Side-->
+        <!--Content of the Left Side-->
         <div class="col-3">
-            <!--User Testimonial-->
-            <blockquote class="testimonial text-right bigtest">
-                <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                    labore
-                    et dolore magna aliqua</q>
-                <footer>— John Doe, Happy Customer</footer>
-            </blockquote>
-            <!-- End of Testimonial-->
-
+            <div class="section-heading">
+                <h3>{{ content.tagline }}</h3>
+                <h2 class="section-title">{{ content.title }}</h2>
+                <p class="section-subtitle">{{ content.description }}</p>
+            </div>
+            <a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
+                {{ content.buttontext }} <i class="fa fa-play" aria-hidden="true"></i>
+            </a>
         </div>
         <!--End Content Left Side-->
 
         <!--Content of the Right Side-->
         <div class="col-3">
-            <div class="section-heading">
-                <h3>BELIEVING</h3>
-                <h2 class="section-title">Focusing On What Matters Most</h2>
-                <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                    eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
-            </div>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
-                totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
-                dicta sunt explicabo.
-            </p>
-            <p>
-                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
-                consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.
-                Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet!
-            </p>
-            <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
-            <a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
-                WATCH VIDEO <i class="fa fa-play" aria-hidden="true"></i>
-            </a>
+            <p *ngFor="let paragraph of content.paragraphs">{{ paragraph }}</p>
         </div>
         <!--End Content Right Side-->
 
         <div class="col-3">
-            <img src="assets/images/dancer.jpg" alt="Dancer"/>
+            <img src="assets/images/gallery-images/gallery-image-3.jpg" alt="bg"/>
         </div>
 
     </div>
