--- a/ClientSide/src/app/footer/footer.component.html
+++ b/ClientSide/src/app/footer/footer.component.html
@@ -2,10 +2,10 @@
 <footer id="landing-footer" class="clearfix">
     <div class="row clearfix">
 
-        <p id="copyright" class="col-2">Made with love by <a href="https://www.shapingrain.com">ShapingRain</a></p>
+        <p id="copyright" class="col-2">{{ footer.copyrightText }}<a href="{{ footer.developerlink }}"> {{ footer.developer }}</a></p>
         
         <!--Social Icons in Footer-->
-        <div class="col-2 social-icons" id="footer-social">
+        <div class="col-2" style="text-align: right;" id="footer-social">
             <app-social></app-social>
         </div>
         <!--End of Social Icons in Footer-->
