--- a/ClientSide/src/app/testimonial/testimonial.component.html
+++ b/ClientSide/src/app/testimonial/testimonial.component.html
@@ -4,37 +4,15 @@
     <div class="row clearfix">
 
         <div class="section-heading">
-            <h3>FEEDBACK</h3>
-            <h2 class="section-title">What our customers are saying</h2>
+            <h3>{{ testimonials.tagline }}</h3>
+            <h2 class="section-title">{{ testimonials.title }}</h2>
         </div>
 
         <!--User Testimonial-->
-        <blockquote class="col-3 testimonial classic">
-            <img src="assets/images/user-images/user-1.jpg" alt="User"/>
-            <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore
-                et dolore magna aliqua</q>
-            <footer>John Doe - Happy Customer</footer>
-        </blockquote>
-        <!-- End of Testimonial-->
-
-        <!--User Testimonial-->
-        <blockquote class="col-3 testimonial classic">
-            <img src="assets/images/user-images/user-2.jpg" alt="User"/>
-            <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore
-                et dolore magna aliqua</q>
-            <footer>Roslyn Doe - Happy Customer</footer>
-        </blockquote>
-        <!-- End of Testimonial-->
-
-        <!--User Testimonial-->
-        <blockquote class="col-3 testimonial classic">
-            <img src="assets/images/user-images/user-3.jpg" alt="User"/>
-            <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                labore
-                et dolore magna aliqua</q>
-            <footer>Thomas Doe - Happy Customer</footer>
+        <blockquote class="col-3 testimonial classic" *ngFor="let feedback of testimonials.feedbacks">
+            <img src="{{ feedback.userimage }}" alt="User"/>
+            <q>{{ feedback.comments }}</q>
+            <footer>{{ feedback.name }} - {{ feedback.company }}</footer>
         </blockquote>
         <!-- End of Testimonial-->
 
