finished basics of tutorial

--- a/ClientSide/src/app/app.component.html
+++ b/ClientSide/src/app/app.component.html
@@ -12,6 +12,7 @@
     <app-navigation></app-navigation>
       <router-outlet></router-outlet>
     <app-footer></app-footer>
+    <router-outlet name="popup"></router-outlet>
   </main>
   <!--End Main Content Area-->
 
