--- a/ClientSide/src/app/board/board.component.html
+++ b/ClientSide/src/app/board/board.component.html
@@ -7,5 +7,6 @@
     <ul>
         {{ board.description }}
     </ul>
-    <a routerLink="/board/{{ board.id }}">EDIT BOARD</a>
+    <a routerLink="/board/{{ board.id }}" class="button"><i class="ion-md-eye"></i></a>
+    <a routerLink="/board/{{ board.id }}" class="button"><i class="ion-md-create"></i></a>
 </div>
