--- a/ClientSide/src/app/boards/boards.component.html
+++ b/ClientSide/src/app/boards/boards.component.html
@@ -4,6 +4,7 @@
         <div class="section-heading">
             <h3>{{ boards.tagline }}</h3>
             <h2 class="section-title">{{ boards.title }}</h2>
+            <a routerLink="/create-board" class="button" id="add-button"><i class="ion-md-add"></i></a>
         </div>
         <div *ngFor="let board of pages" class="board-block col-3 wow fadeInUp" data-wow-delay="0.8s">
             <app-board [board]="board"></app-board>
