--- a/ClientSide/src/app/navigation/navigation.component.html
+++ b/ClientSide/src/app/navigation/navigation.component.html
@@ -11,40 +11,43 @@
 
             </div>
             <!--End of Logo-->
-            
-            <app-social></app-social>
+            <aside>
+                <a [routerLink]="[{outlets: {popup: ['contactus']}}]">CONTACT US</a>
+                <app-user-profile-icon [profileImage]="profileImage"></app-user-profile-icon>
+                <app-social></app-social>
+            </aside>
             <!--Main Navigation-->
-<nav id="nav-main">
-<ul>
-    <li>
-        <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-    </li>
-    <li>
-        <a routerLink="/about" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">About</a>
-    </li>
-    <li>
-        <a routerLink="/gallery" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Gallery</a>
-    </li>
-    <li>
-        <a routerLink="/services" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Services</a>
-    </li>
-    <li>
-        <a routerLink="/testimonials" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Testimonials</a>
-    </li>
-    <li>
-        <a routerLink="/clients" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Clients</a>
-    </li>
-    <li>
-        <a routerLink="/pricing" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Pricing</a>
-    </li>
-    <li>
-        <a routerLink="/boards" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Boards</a>
-    </li>
-    <li *ngIf="userLoggedIn">
-        <a routerLink="/home" (click)="logout();">Logout</a>
-    </li>
-</ul>
-</nav>
+            <nav id="nav-main">
+            <ul>
+                <li>
+                    <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+                </li>
+                <li>
+                    <a routerLink="/about" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">About</a>
+                </li>
+                <li>
+                    <a routerLink="/gallery" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Gallery</a>
+                </li>
+                <li>
+                    <a routerLink="/services" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Services</a>
+                </li>
+                <li>
+                    <a routerLink="/testimonials" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Testimonials</a>
+                </li>
+                <li>
+                    <a routerLink="/clients" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Clients</a>
+                </li>
+                <li>
+                    <a routerLink="/pricing" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Pricing</a>
+                </li>
+                <li>
+                    <a routerLink="/boards" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Boards</a>
+                </li>
+                <li *ngIf="userLoggedIn">
+                    <a routerLink="/home" (click)="logout();">Logout</a>
+                </li>
+            </ul>
+            </nav>
 <!--End of Main Navigation-->
 
             <div id="nav-trigger"><span></span></div>
