--- a/ClientSide/src/app/create-board/create-board.component.css
+++ b/ClientSide/src/app/create-board/create-board.component.css
@@ -116,3 +116,10 @@ form {
 [class^='ion-'] {
     font-size: 1.2em;
 }
+
+button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+  cursor: default;
+}
