--- a/ClientSide/src/app/login/login.component.html
+++ b/ClientSide/src/app/login/login.component.html
@@ -10,18 +10,25 @@
             <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)">
             <div class="form-group">
                 <input type="text" class="form-control input-lg" name="email" placeholder="Email" formControlName="email">
-                <span  class="ion-ios-at form-control-icon"></span> 
+                <span  class="ion-ios-at form-control-icon"></span>
+                <div *ngIf="email.invalid && (email.dirty || email.touched)">
+                    <div *ngIf="email.errors.required; else badEmail">Required</div>
+                    <ng-template #badEmail>Invalid Email</ng-template>
+                </div>
             </div>
             <div class="form-group">
-                <input type="password" class="form-control input-lg" name="password" placeholder="Password" formControlName="password">
+                <input type="password" class="form-control input-lg" name="pw" placeholder="Password" formControlName="pw">
                 <span  class="ion-ios-key form-control-icon"></span> 
+                <div *ngIf="pw.invalid && (pw.dirty || pw.touched)">
+                    <div *ngIf="pw.errors.required; else short">Required</div>
+                    <ng-template #short>Too short</ng-template>
+                </div>
             </div>
 
-            <button type="submit" class="btn btn-block btn-success"> Login</button>
+            <button type="submit" class="btn btn-block btn-success" [disabled]="!loginForm.valid"> Login</button>
 
             <p class="text-center">
                 <small>Don't have an account yet? <a routerLink="/signup">Sign up</a></small>
-
             </p>
 
             </form>
