--- a/ClientSide/src/app/signup/signup.component.html
+++ b/ClientSide/src/app/signup/signup.component.html
@@ -9,23 +9,38 @@
   
               <form [formGroup]="signupForm" (ngSubmit)="signup(signupForm.value)">
                 <div class="form-group">
-                    <input type="text" class="form-control form-names input-lg" name="firstName" placeholder="First Name" formControlName="firstName">
-                    <span  class="ion-md-person form-control-icon"></span> 
+                    <input type="text" class="form-control input-lg" name="firstName" placeholder="First Name" formControlName="firstName">
+                    <span  class="ion-md-person form-control-icon"></span>
+                    <div *ngIf="firstName.touched && firstName.invalid">Required</div>
                 </div>
                 <div class="form-group">
-                    <input type="text" class="form-control form-names input-lg" name="lastName" placeholder="Last Name" formControlName="lastName">
+                    <input type="text" class="form-control input-lg" name="lastName" placeholder="Last Name" formControlName="lastName">
                     <span  class="ion-md-person form-control-icon"></span> 
+                    <div *ngIf="lastName.touched && lastName.invalid">Required</div>
                 </div>
                 <div class="form-group">
                     <input type="text" class="form-control input-lg" name="email" placeholder="Email" formControlName="email">
-                    <span  class="ion-ios-at form-control-icon"></span> 
+                    <span  class="ion-ios-at form-control-icon"></span>
+                    <div *ngIf="email.invalid && (email.dirty || email.touched)">
+                        <div *ngIf="email.errors.required; else badEmail">Required</div>
+                        <ng-template #badEmail>Invalid Email</ng-template>
+                    </div>
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control input-lg" name="password" placeholder="Password" formControlName="password">
-                    <span  class="ion-ios-key form-control-icon"></span> 
+                    <input type="password" class="form-control input-lg" name="pw" placeholder="Password" formControlName="pw">
+                    <span  class="ion-ios-key form-control-icon"></span>
+                    <div *ngIf="pw.invalid && (pw.dirty || pw.touched)">
+                        <div *ngIf="pw.errors.required; else short">Required</div>
+                        <ng-template #short>Too short</ng-template>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <input type="password" class="form-control input-lg" name="rePassword" placeholder="Confirm Password" formControlName="rePassword">
+                    <span  class="ion-md-repeat form-control-icon"></span> 
+                    <div *ngIf="!confirmPassword && rePassword.touched">Must Be Same As Password</div>
                 </div>
     
-                <button type="submit" class="btn btn-block btn-success">Sign Up</button>
+                <button type="submit" class="btn btn-block btn-success" [disabled]="!signupForm.valid">Sign Up</button>
     
                 <p class="text-center">
                     <small>Already have an account? <a routerLink="/login">Login</a></small>
