*fixed logout button *changed edit-board

--- a/ClientSide/src/app/login/login.component.html
+++ b/ClientSide/src/app/login/login.component.html
@@ -29,7 +29,7 @@
 
             </form>
 			
-			<p *ngIf="logFail">Wrong email or password!</p>
+			      <p *ngIf="logFail">{{ errorMsg }}</p>
 
             <p class="text-center">
                 <small>Don't have an account yet? <a routerLink="/signup">Sign up</a></small>
