--- a/ClientSide/src/app/login/login.component.html
+++ b/ClientSide/src/app/login/login.component.html
@@ -11,7 +11,7 @@
             <div class="form-group">
                 <input (focus)="logFail=false" type="text" class="form-control input-lg" name="email" placeholder="Email" formControlName="email">
                 <span class="ion-ios-at form-control-icon"></span>
-                <div *ngIf="email.invalid && (email.dirty || email.touched)">
+                <div *ngIf="email.invalid && (email.dirty || email.touched || !email.empty)">
                     <div *ngIf="email.errors.required; else badEmail">Required</div>
                     <ng-template #badEmail>Invalid Email</ng-template>
                 </div>
@@ -19,7 +19,7 @@
             <div class="form-group">
                 <input (focus)="logFail=false" type="password" class="form-control input-lg" name="pw" placeholder="Password" formControlName="pw">
                 <span class="ion-ios-key form-control-icon"></span> 
-                <div *ngIf="pw.invalid && (pw.dirty || pw.touched)">
+                <div *ngIf="pw.invalid && (pw.dirty || pw.touched || !pw.empty)">
                     <div *ngIf="pw.errors.required; else short">Required</div>
                     <ng-template #short>Too short</ng-template>
                 </div>
