changed download to true

--- a/ClientSide/src/app/edit-board/edit-board.component.html
+++ b/ClientSide/src/app/edit-board/edit-board.component.html
@@ -25,7 +25,7 @@
                         [saveDataButtonText]="'Save'"
                         [lineWidth]="lineWidth"
                         [strokeColor]="'rgb(0,0,0)'"
-                        [shouldDownloadDrawing]="false"
+                        [shouldDownloadDrawing]="true"
                         (onBatchUpdate)="sendBatchUpdate($event)"
                         (onClear)="onCanvasClear()"
                         (onUndo)="onCanvasUndo($event)"
