--- a/ClientSide/src/app/board/board.component.html
+++ b/ClientSide/src/app/board/board.component.html
@@ -1,11 +1,11 @@
 <div class="board-block-content">
-    <h3>{{ board.title }}</h3>
-    <p class="board-sub">author: {{ board.author }}, last checked: {{ board.latestedit | date:'dd.MM.yyyy' }}</p>
+    <h3>{{ board.name }}</h3>
+    <p class="board-sub">owner: {{ owner }}, last opened: {{ board.last_opened | date:'dd.MM.yyyy' }}</p>
     <div class="board-image">
-        <img src="{{ board.image }}" alt="{{ board.title }}">
+        <img src="../../assets/images/gallery-images/gallery-image-1.jpg" alt="{{ board.name }}">
     </div>
     <ul>
-        {{ board.description }}
+        {{ board.desc }}
     </ul>
     <a routerLink="/board/{{ board.id }}" class="button"><i class="ion-md-create"></i></a>
     <a routerLink="/shareBoard" (click)="shareBoard()" class="button"><i class="ion-md-share-alt"></i></a>
