--- a/ClientSide/src/app/edit-board/edit-board.component.html
+++ b/ClientSide/src/app/edit-board/edit-board.component.html
@@ -1,7 +1,7 @@
 <div class="row clearfix">
     <div class="section-heading">
-        <h3>{{ board.title }}</h3>
-        <h2 class="section-title">{{ board.description }}</h2>
+        <h3>{{ board.name }}</h3>
+        <h2 class="section-title">{{ board.desc }}</h2>
     </div>
 </div>
 <div id="history">
