--- a/ClientSide/src/app/board/board.component.html
+++ b/ClientSide/src/app/board/board.component.html
@@ -8,6 +8,6 @@
         {{ board.desc }}
     </ul>
     <a routerLink="/board/{{ board.id }}" (click)="setBoard()" class="button"><i class="ion-md-create"></i></a>
-    <a routerLink="/shareBoard" (click)="shareBoard()" class="button"><i class="ion-md-share-alt"></i></a>
+    <a routerLink="/share-board" (click)="setBoard()" class="button"><i class="ion-md-share-alt"></i></a>
     <a routerLink="/boards" (click)="removeBoard()" class="button"><i class="ion-md-close"></i></a>
 </div>
