--- a/ClientSide/src/app/navigation/navigation.component.css
+++ b/ClientSide/src/app/navigation/navigation.component.css
@@ -1,12 +1,17 @@
 .navigation-wrapper {
-position: relative;
+    position: relative;
 }
-
+    
 .navigation-logo {
     transform-origin: top left;
     position: fixed;
-    left: 100px;
+    left: 80px;
     top: 45px;
+    opacity: 0;
+}
+
+.active .navigation-logo {
+    opacity: 1;
 }
 
 .social-header {
@@ -17,10 +22,15 @@ position: relative;
 
 .user {
     position: fixed;
+    left: 11px;
+    top: 100px;
+}
+
+.active .user {
     left: 40px;
     top: 80px;
 }
-
+    
 .auth {
     position: fixed;
     left: 140px;
@@ -30,116 +40,168 @@ position: relative;
     border: none;
     color: #ffce3b;
     text-decoration: none;
+    opacity: 0;
 }
 
-.navigation-menu ul li  a.curr-nav {
+.active .auth {
+    opacity: 1;
+}
+
+.navigation-menu .main-menu li  a.curr-nav {
     border-bottom: 3px solid;
     color: #d2b356;
     border-color: #d2b356;
 }
 
 .navigation-button {
-will-change: transform;
-display: flex;
-align-items: center;
-justify-content: center;
-flex-wrap: wrap;
-position: fixed;
-top: 40px;
-left: 100px;
-background: transparent;
-cursor: pointer;
-z-index: 999;
+    will-change: transform;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    position: fixed;
+    top: 40px;
+    left: 35px;
+    background: transparent;
+    cursor: pointer;
+    opacity: 1;
+    z-index: 999;
 }
-
+    
 .navigation-button .fa {
-border: 2px solid black;
-border-radius: 3px;
-padding: 10px;
-color: 	#FFCC00;
+    border: 2px solid black;
+    border-radius: 3px;
+    padding: 10px;
+    color: 	#FFCC00;
 }
-
-.navigation-menu ul li {
-list-style: none;
-font-family: impact;
-font-weight: 300;
-color: hsl(0,0%,70%);
+    
+.navigation-menu .main-menu li {
+    list-style: none;
+    font-family: impact;
+    font-weight: 300;
+    color: hsl(0,0%,70%);
 }
-
+    
 .navigation-menu {
-position: fixed;
-top: 0;
-left: 50px;
-width: 20%;
-background: rgba(95, 95, 95, 0.637);
-height: 100%;
-transform: skewX(90deg) translate(100%,0);
-transform-origin: top left;
-transition: all .3s ease-in;
-z-index: 9999;
-}
-
-.navigation-menu ul {
-/* transform: skewX(1deg); */
-transform-origin: top left;
-position: fixed;
-left: 30px;
-top: 200px;
-width: 90%;
-text-align: left;
-
-}
-
-.navigation-menu ul li {
-position: relative;
-font-size: 32px;
-color: hsl(0,0%,10%);
-line-height: 64px;
-}
-
-.navigation-menu ul li  a {
-border: none;
-color: hsl(0,0%,10%);
-text-decoration: none;
-}
-
-.navigation-menu li {
-opacity: 0;
-transform: translate(0, 20px);
-transition: all .0s ease-in .2s;
+    position: fixed;
+    left: 20px;
+    top: 0px;
+    width: 8%;
+    background: rgba(95, 95, 95, 0.637);
+    height: 100%;
+    transform: skewX(0deg) translate(0,0);
+    transform-origin: top left;
+    transition: all .3s ease-in;
+    border-bottom-right-radius: 150px;
+    z-index: 9999;
 }
 
 .active {
-transform: skewX(5deg) translate(0,0);
+    transform: skewX(5deg) translate(0,0);
+    width: 20%;
+    border-bottom-right-radius: 0px;
 }
 
-.active li {
-opacity: 1;
-transform: translate(0,0);
-transition: all .2s ease-in .0s;
+.active .navigation-button {
+    display: none;
 }
 
-.active li:nth-child(1) {
-transition-delay: .3s;
+.navigation-menu .main-menu {
+    /* transform: skewX(1deg); */
+    transform-origin: top left;
+    position: fixed;
+    left: 30px;
+    top: 200px;
+    width: 90%;
+    text-align: left;
 }
-.active li:nth-child(2) {
-transition-delay: .4s;
+
+.navigation-menu .icon-menu {
+    position: fixed;
+    left: 10px;
+    top: 200px;
+    z-index: 999;
 }
-.active li:nth-child(3) {
-transition-delay: .5s;
+
+.navigation-menu .icon-menu li {
+    list-style: none;
 }
-.active li:nth-child(4) {
-transition-delay: .6s;
+
+.navigation-menu .icon-menu li a.curr-nav {
+    color:	#FFCC00;
+    border-left: 5px solid #FFCC00;
 }
-.active li:nth-child(5) {
-transition-delay: .7s;
+
+.navigation-menu .icon-menu li a:hover {
+    color:	rgb(46, 46, 46);
+    border-left: 3px solid rgb(46, 46, 46);
 }
-.active li:nth-child(6) {
-transition-delay: .8s;
+
+.navigation-menu .icon-menu li a.curr-nav:hover {
+    color:	#FFCC00;
+    border-left: 5px solid #FFCC00;
 }
-.active li:nth-child(7) {
-transition-delay: .9s;
+
+.navigation-menu .icon-menu li a {
+    display: block;
+    color:	black;
+    padding: 20px;
+    padding-left: 35px;
+    margin: 2px;
+    border-left: 3px solid black;
 }
-.active li:nth-child(8) {
-transition-delay: 1s;
+
+.active .icon-menu {
+    display: none;
+} 
+
+.navigation-menu .main-menu li {
+    position: relative;
+    font-size: 32px;
+    color: hsl(0,0%,10%);
+    line-height: 64px;
+}
+    
+.navigation-menu .main-menu li  a {
+    border: none;
+    color: hsl(0,0%,10%);
+    text-decoration: none;
+}
+    
+.navigation-menu .main-menu li {
+    visibility: hidden;
+    opacity: 0;
+    transform: translate(0, 20px);
+}
+    
+.active .main-menu li {
+    visibility: visible;
+    opacity: 1;
+    transform: translate(0,0);
+    transition: all .2s ease-in .0s;
+}
+    
+.active .main-menu li:nth-child(1) {
+    transition-delay: .3s;
+}
+.active .main-menu li:nth-child(2) {
+    transition-delay: .4s;
+}
+.active .main-menu li:nth-child(3) {
+    transition-delay: .5s;
+}
+.active .main-menu li:nth-child(4) {
+    transition-delay: .6s;
+}
+.active .main-menu li:nth-child(5) {
+    transition-delay: .7s;
+}
+.active .main-menu li:nth-child(6) {
+    transition-delay: .8s;
+}
+.active .main-menu li:nth-child(7) {
+    transition-delay: .9s;
+}
+.active .main-menu li:nth-child(8) {
+    transition-delay: 1s;
 }
