--- a/ClientSide/src/app/navigation/navigation.component.html
+++ b/ClientSide/src/app/navigation/navigation.component.html
@@ -1,16 +1,42 @@
 <div class="container">  
     <div class="navigation-wrapper">
-        <div (click)="isActive = true" class="navigation-button">
-            <i id="navButton" class="fa fa-bars"></i>
-        </div>
         <div class="navigation-menu" [ngClass]="{'active': isActive}">
-            <!-- <div id="logo">
+            <div (click)="isActive = true" class="navigation-button">
+                <i id="navButton" class="fa fa-arrow-right"></i>
+            </div>
+            <div id="logo">
                 <img src="assets/images/logo-2.png" class="navigation-logo" alt="Landing Page"/>
-            </div> -->
+            </div>
             <app-user-profile-icon (click)="close()" class="user" [profileImage]="this.api.isUserLogged() ? '../assets/images/user-images/user-1.jpg' : '../assets/images/user-images/default-user.jpg'"></app-user-profile-icon>
-            <a class="auth" *ngIf="api.isUserLogged()" routerLink="/home" (click)="api.logout(); close();">LOGOUT</a>
+            <a class="auth" *ngIf="api.isUserLogged()" routerLink="/home" (click)="api.userLoggedOut(); close();">LOGOUT</a>
             <a class="auth" *ngIf="!api.isUserLogged()" routerLink="/login" (click)="close()">LOGIN</a>
-            <ul>
+            <ul class="icon-menu">
+                <li>
+                    <a routerLink="/home" routerLinkActive="curr-nav" [routerLinkActiveOptions]="{exact: true}"><i class="fa fa-home"></i></a>
+                </li>
+                <li>
+                    <a routerLink="/about" routerLinkActive="curr-nav" [routerLinkActiveOptions]="{exact: true}"><i class="fa fa-question"></i></a>
+                </li>
+                <li>
+                    <a routerLink="/services" routerLinkActive="curr-nav" [routerLinkActiveOptions]="{exact: true}"><i class="fa fa-info"></i></a>
+                </li>
+                <li>
+                    <a routerLink="/boards" routerLinkActive="curr-nav" [routerLinkActiveOptions]="{exact: true}"><i class="fa fa-clipboard"></i></a>
+                </li>
+                <li>
+                    <a routerLink="/public-boards" routerLinkActive="curr-nav" [routerLinkActiveOptions]="{exact: true}"><i class="fa fa-cloud"></i></a>
+                </li>
+                <li>
+                    <a routerLink="/members" routerLinkActive="curr-nav" [routerLinkActiveOptions]="{exact: true}"><i class="fa fa-user-plus"></i></a>
+                </li>
+                <li>
+                    <a routerLink="/groups" routerLinkActive="curr-nav" [routerLinkActiveOptions]="{exact: true}"><i class="fa fa-users"></i></a>
+                </li>
+                <li>
+                    <a [routerLink]="[{outlets: {popup: ['contactus']}}]"><i class="fa fa-at"></i></a>
+                </li>
+            </ul>
+            <ul class="main-menu">
                 <li>
                     <a routerLink="/home" (click)="close()" routerLinkActive="curr-nav" [routerLinkActiveOptions]="{exact: true}">HOME</a>
                 </li>
