--- a/ClientSide/src/app/edit-board/edit-board.component.html
+++ b/ClientSide/src/app/edit-board/edit-board.component.html
@@ -1,44 +1,56 @@
-<div class="row clearfix">
-    <div class="section-heading">
-        <h3>{{ board.name }}</h3>
-        <h2 class="section-title">{{ board.desc }}</h2>
+<aside id="testimonials" class="scrollto text-center" data-enllax-ratio=".2">
+
+    <div class="row clearfix">
+
+        <div class="section-heading">
+            <h3>{{ board.desc }}</h3>
+            <h2 class="section-title">{{ board.name }}</h2>
+        </div>
+        <div style="height: 550px; width: 1240px; position: relative; left: 10px;">
+            <!-- <canvas-whiteboard #canvasWhiteboard
+                                [drawButtonClass]="'drawButtonClass'"
+                                [drawButtonText]="'Draw'"
+                                [clearButtonClass]="'clearButtonClass'"
+                                [clearButtonText]="'Clear'"
+                                [undoButtonText]="'Undo'"
+                                [undoButtonEnabled]="true"
+                                [redoButtonText]="'Redo'"
+                                [redoButtonEnabled]="true"
+                                [colorPickerEnabled]="true"
+                                [saveDataButtonEnabled]="true"
+                                [saveDataButtonText]="'Save'"
+                                [lineWidth]="lineWidth"
+                                [strokeColor]="'rgb(0,0,0)'"
+                                [shouldDownloadDrawing]="true"
+                                (onBatchUpdate)="sendBatchUpdate($event)"
+                                (onClear)="onCanvasClear()"
+                                (onUndo)="onCanvasUndo($event)"
+                                (onRedo)="onCanvasRedo($event)"
+                                (onSave)="onCanvasSave($event)">
+            </canvas-whiteboard> -->
+            <app-board-object 
+                (back)="goBack()"
+                (sendUpdate)="sendUpdate()"
+                (historySwitch)="historyChanged($event)"
+                (userSwitch)="usersChanged($event)"
+                (onSave)="onCanvasSave()"
+                (onClear)="onCanvasClear()"
+                [(updates)]="updates"
+                ></app-board-object>
+        </div>
+        <div [ngClass]="{'removed': !historyTable}" id="history">
+            <h2>History List</h2>
+            <ul>
+                <li *ngFor="let shape of updates; let i=index"><a style="cursor: pointer;" (click)="hideUpdates(i)">{{ shape.shapeName }}</a></li>
+            </ul>
+        </div>
+        
+        <div [ngClass]="{'removed': !usersTable}" id="users">
+            <h2>Online Users</h2>
+            <ul>
+                <li *ngFor="let user of users; let i=index"><a style="cursor: pointer;">{{ user }}</a></li>
+            </ul>
+        </div>
     </div>
-</div>
-<div style="height: 600px; position: relative;">
-    <canvas-whiteboard #canvasWhiteboard
-                        [drawButtonClass]="'drawButtonClass'"
-                        [drawButtonText]="'Draw'"
-                        [clearButtonClass]="'clearButtonClass'"
-                        [clearButtonText]="'Clear'"
-                        [undoButtonText]="'Undo'"
-                        [undoButtonEnabled]="true"
-                        [redoButtonText]="'Redo'"
-                        [redoButtonEnabled]="true"
-                        [colorPickerEnabled]="true"
-                        [saveDataButtonEnabled]="true"
-                        [saveDataButtonText]="'Save'"
-                        [lineWidth]="lineWidth"
-                        [strokeColor]="'rgb(0,0,0)'"
-                        [shouldDownloadDrawing]="true"
-                        (onBatchUpdate)="sendBatchUpdate($event)"
-                        (onClear)="onCanvasClear()"
-                        (onUndo)="onCanvasUndo($event)"
-                        (onRedo)="onCanvasRedo($event)"
-                        (onSave)="onCanvasSave($event)">
-    </canvas-whiteboard>
-</div>
-<div id="history">
-    <h2 id="historyListTitle">History List</h2>
-    <ul>
-        <li *ngFor="let change of updates.reverse(); let i=index"><a style="cursor: pointer;" (click)="hideUpdates(updates.length-i-1)">{{ change[0].selectedShape }}</a></li>
-    </ul>
-</div>
-<div id="users">
-    <h2 id="usersListTitle">Online Users</h2>
-    <ul>
-        <li *ngFor="let user of users; let i=index"><a style="cursor: pointer;">{{ user }}</a></li>
-    </ul>
-</div>
-<div style="text-align:center;">
-    <a (click)="goBack()" class="button">BACK</a>
-</div>
+
+</aside>
