--- a/ClientSide/src/app/navigation/navigation.component.css
+++ b/ClientSide/src/app/navigation/navigation.component.css
@@ -21,14 +21,14 @@
 }
 
 .user {
+    display: none;
     position: fixed;
-    left: 11px;
-    top: 100px;
+    left: 40px;
+    top: 80px;
 }
 
 .active .user {
-    left: 40px;
-    top: 80px;
+    display: block;
 }
     
 .auth {
@@ -40,11 +40,11 @@
     border: none;
     color: #ffce3b;
     text-decoration: none;
-    opacity: 0;
+    display: none;
 }
 
 .active .auth {
-    opacity: 1;
+    display: block;
 }
 
 .navigation-menu .main-menu li  a.curr-nav {
@@ -119,7 +119,7 @@
 .navigation-menu .icon-menu {
     position: fixed;
     left: 10px;
-    top: 200px;
+    top: 100px;
     z-index: 999;
 }
 
@@ -147,7 +147,7 @@
     color:	black;
     padding: 20px;
     padding-left: 35px;
-    margin: 2px;
+    margin: 10px;
     border-left: 3px solid black;
 }
 
