--- a/ClientSide/src/app/user-dashboard/user-dashboard/user-dashboard.component.html
+++ b/ClientSide/src/app/user-dashboard/user-dashboard/user-dashboard.component.html
@@ -5,7 +5,7 @@
                 <div class="panel-body center">
                     <blockquote class="testimonial classic">
                         <img src="../assets/images/user-images/user-1.jpg" alt="User"/>
-                        <q>information.</q>
+                        <q>status: online</q>
                         <footer>
                             <a (click)="logout()" class="button">SIGN OUT</a>
                         </footer>
